# Adept3x

./: .gitignore  Cargo.toml  HOW_TO_COMPILE.md  README.md  rustfmt.toml
src/adept/: Cargo.toml
src/adept/src/: driver.rs  main.rs
src/components/build_aon/: Cargo.toml
src/components/build_aon/src/: lib.rs
src/components/build_asg/: Cargo.toml
src/components/build_asg/src/: collect_polymorphs.rs  core_struct_info.rs  ctx.rs  destination.rs  error.rs  expr_alias.rs  func_body.rs  func_haystack.rs  func_head.rs  global_variable.rs  helper_expr.rs  job.rs  lib.rs  stmt.rs  unalias.rs  variable_haystack.rs
src/components/build_asg/src/conform/: from_anonymous_enum.rs  from_c_integer.rs  from_float.rs  from_float_literal.rs  from_integer.rs  from_integer_literal.rs  from_pointer.rs  from_size_integer.rs  mod.rs  to_default.rs
src/components/build_asg/src/expr/: array_access.rs  basic_binary_operation.rs  conditional.rs  declare_assign.rs  member_expr.rs  mod.rs  short_circuiting_binary_operation.rs  static_member.rs  struct_literal.rs  unary_operation.rs  variable.rs
src/components/build_asg/src/impl_head/: for_alls.rs  mod.rs
src/components/build_asg/src/polymorph/: matcher.rs  mod.rs  type_args_to_poly_value.rs
src/components/build_asg/src/type_ctx/: find.rs  find_error.rs  mod.rs  resolve_type.rs
src/components/build_asg/src/type_definition/: mod.rs  prepare.rs  resolve.rs
src/components/build_asg/src/unify_types/: compute.rs  integer_literals.rs  mod.rs
src/components/build_ast/: Cargo.toml
src/components/build_ast/src/: annotation.rs  error.rs  file_header.rs  input.rs  lib.rs  make_error.rs  parse_annotation.rs  parse_block.rs  parse_enum.rs  parse_func.rs  parse_func_params.rs  parse_global.rs  parse_global_variable.rs  parse_helper_expr.rs  parse_impl.rs  parse_linkset.rs  parse_namespace.rs  parse_structure.rs  parse_top_level.rs  parse_trait.rs  parse_type.rs  parse_type_alias.rs  parse_type_params.rs  parse_util.rs
src/components/build_ast/src/parse_expr/: mod.rs
src/components/build_c_ast/: Cargo.toml
src/components/build_c_ast/src/: lib.rs
src/components/build_c_token/: Cargo.toml
src/components/build_c_token/src/: lexer.rs  lib.rs  number.rs
src/components/build_executable/: Cargo.toml
src/components/build_executable/src/: lib.rs
src/components/build_ir/: Cargo.toml
src/components/build_ir/src/: cast.rs  datatype.rs  error.rs  func_builder.rs  funcs.rs  function.rs  global.rs  globals.rs  lib.rs  stmts.rs  structs.rs  structure.rs
src/components/build_ir/src/expr/: mod.rs  (+2 more)
src/components/build_llvm_ir/: Cargo.toml
src/components/build_llvm_ir/src/: address.rs  backend_type.rs  ctx.rs  globals.rs  intrinsics.rs  lib.rs  llvm_type_ref_ext.rs  module.rs  null_terminated_string.rs  structure.rs  target_triple.rs  value_catalog.rs  values.rs
src/components/build_pp_ast/: Cargo.toml
src/components/build_pp_ast/src/: error.rs  lib.rs  line_splice.rs  stdc.rs
src/components/build_token/: Cargo.toml
src/components/build_token/src/: compound_identifier_state.rs  hex_number_state.rs  identifier_state.rs  lib.rs  macro_state.rs  number_state.rs  polymorph_state.rs  state.rs  string_state.rs
src/components/build_workspace/: Cargo.toml
src/components/build_workspace/src/: explore.rs  explore_within.rs  export_and_link.rs  file.rs  interpreter_env.rs  lex_and_parse.rs  lib.rs  module_file.rs  normal_file.rs  queue.rs  stats.rs
src/components/cli/: Cargo.toml
src/components/cli/src/: lib.rs
src/components/daemon/: Cargo.toml
src/components/daemon/src/: error.rs  fs_watcher.rs  idle.rs  lib.rs  lockfile.rs  main.rs  serve.rs  server.rs  server_main.rs  startup.rs  watch.rs
src/components/db/: Cargo.toml
src/components/db/src/: artifact.rs  assumption_.rs  block_on.rs  db.rs  main.rs  non_zero.rs  presumed_.rs  req.rs  req_info.rs  req_state.rs  rev.rs  rt.rs  rt_mt_incr_.rs  rt_st_incr.rs  rt_st_os_.rs  simple_fixpoint.rs  timeout.rs  wake_after.rs
src/components/interpret/: Cargo.toml
src/components/interpret/src/: error.rs  ip.rs  lib.rs  registers.rs  size_of.rs  syscall_handler.rs  value.rs
src/daemon/: Cargo.toml
src/daemon/src/: client.rs  connection.rs  daemon.rs  error.rs  handle_client.rs  lib.rs  logger.rs  queue.rs  show.rs
src/daemon_init/: Cargo.toml
src/daemon_init/src/: lib.rs
src/document/: Cargo.toml
src/document/src/: lib.rs  line.rs  position.rs  range.rs  unit_tests.rs
src/file_cache/: Cargo.toml
src/file_cache/src/: canonical.rs  file_bytes.rs  file_content.rs  lib.rs  path_interner.rs
src/kernel/: Cargo.toml
src/kernel/src/: lib.rs
src/language_server/: Cargo.toml
src/language_server/src/: dispatch.rs  handled.rs  into_lsp_response.rs  invalid.rs  lib.rs  logger.rs  lsp_endpoint.rs  lsp_method.rs  lsp_method_endpoint.rs  lsp_method_handled.rs  maybe_ready.rs  never_respond.rs  static_wrapper.rs
src/language_server/src/methods/: completion.rs  did_change_text_document.rs  did_open_text_document.rs  document_diagnostic_request.rs  execute_command.rs  initialize.rs  initialized.rs  mod.rs  set_trace.rs  shutdown.rs
src/lsp_connection/: Cargo.toml
src/lsp_connection/src/: connection.rs  id.rs  ide_connection.rs  lib.rs  message.rs  notification.rs  request.rs  response.rs
src/lsp_message/: Cargo.toml
src/lsp_message/src/: id.rs  lib.rs  message.rs  request.rs
src/parser_adept/: Cargo.toml
src/parser_adept/src/: lib.rs
src/request/: Cargo.toml
src/request/src/: block_on.rs  errors.rs  is_div.rs  lib.rs  pf.rs  rt.rs  syms.rs  top_errors.rs  un_like.rs
src/request/src/rt_st_in/: mod.rs  query.rs  react.rs  wake_dependants.rs
src/request/src/run/: compile.rs  list_symbols.rs  mod.rs  parse_file.rs  unused_request.rs
src/rt_st_in/: Cargo.toml
src/rt_st_in/src/: lib.rs  query.rs  react.rs  wake_dependants.rs
src/rt_st_in/src/req_cache/: de.rs  ser.rs
src/syntax_tree/: Cargo.toml
src/syntax_tree/src/: bare_syntax_kind.rs  bare_syntax_node.rs  lib.rs  syntax_node.rs
src/token/: Cargo.toml
src/token/src/: directive.rs  lib.rs  punct.rs  string.rs
(+1539 files in other folders)
