[workspace]
resolver = "3"
members = [
    "src/adept",
    "src/components/request",
    "src/components/language_server",
    "src/components/rg",
    "src/components/vfs",
    "src/components/daemon",
    "src/components/build_aon",
    "src/components/build_token",
    "src/representations/token",
    "src/support/define_requests",
    "src/support/iter_ext",
    "src/support/top_n",
    "src/support/infinite_iterator",
    "src/support/line_column",
    "src/support/text",
]

[workspace.dependencies]
derivative = "2.2.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num-derive = "0.4.2"
derive_more = { version = "2.0.1", features = ["full"] }
