[workspace]
resolver = "3"
members = [
    "src/adept",
    "src/components/request",
    "src/components/language_server",
    "src/components/vfs",
    "src/components/idle",
    "src/components/daemon",
    "src/components/build_aon",
    "src/components/build_token",
    "src/components/transport",
    "src/representations/token",
    "src/representations/text_edit",
    "src/representations/ipc_message",
    "src/representations/fingerprint",
    "src/support/define_requests",
    "src/support/iter_ext",
    "src/support/top_n",
    "src/support/infinite_iterator",
    "src/support/line_column",
    "src/support/text",
]

[workspace.dependencies]
derivative = "2.2.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num-derive = "0.4.2"
derive_more = { version = "2.0.1", features = ["full"] }
smol = "2.0.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"
smallvec = { version = "1.15.1", features = ["serde"] }
itertools = "0.14.0"
bincode = { version = "2.0.1", features = ["serde"] }
by_address = "1.2.1"
thiserror = "2.0.17"
pin-project-lite = "0.2"
fluent-uri = "0.4.1"

