[workspace]
resolver = "3"
members = [
    "src/adept",
    "src/daemon",
    "src/daemon_init",
    "src/language_server",
    "src/lock_file",
    "src/idle_tracker",
    "src/lsp_connection",
    "src/lsp_message",
]

[workspace.dependencies]
derivative = "2.2.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num-derive = "0.4.2"
derive_more = { version = "2.0.1", features = ["full"] }
smol = "2.0.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_derive = "1.0.228"
smallvec = { version = "1.15.1", features = ["serde"] }
itertools = "0.14.0"
bincode = { version = "2.0.1", features = ["serde"] }
by_address = "1.2.1"
thiserror = "2.0.17"
pin-project-lite = "0.2"
fluent-uri = "0.4.1"
fern = "0.7.1"
humantime = "2.3.0"
log = "0.4.29"
lsp-types = "0.97.0"

