[package]
name = "daemon_init"
version = "0.1.0"
edition = "2024"

[dependencies]
lock_file = { version = "0.1.0", path = "../lock_file" }
lsp_message = { version = "0.1.0", path = "../lsp_message" }
daemon = { version = "0.1.0", path = "../daemon" }
thiserror.workspace = true
derive_more.workspace = true
fern.workspace = true
humantime.workspace = true
log.workspace = true
