[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
parser_adept = { version = "0.1.0", path = "../parser_adept" }
document = { version = "0.1.0", path = "../document" }
syntax_tree = { version = "0.1.0", path = "../syntax_tree" }
util_infinite_iterator = { version = "0.1.0", path = "../util_infinite_iterator" }
token = { version = "0.1.0", path = "../token" }
thiserror.workspace = true
derive_more.workspace = true
log.workspace = true
arrayvec = { version= "0.7.6" }
num-bigint.workspace = true
num-traits.workspace = true
bit-vec.workspace = true

[features]
default = []
kernel = []
