[package]
name = "lsp_connection"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde.workspace = true
content_length = { version = "0.1.0", path = "../content_length" }
connection = { version = "0.1.0", path = "../connection" }
lsp_message = { version = "0.1.0", path = "../lsp_message" }
daemon = { version = "0.1.0", path = "../daemon" }
daemon_init = { version = "0.1.0", path = "../daemon_init" }
derive_more.workspace = true
log.workspace = true
