[package]
name = "build_aon"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
infinite_iterator = { version = "0.1.0", path = "../../support/infinite_iterator" }
num-bigint.workspace = true
num-traits.workspace = true
text = { version = "0.1.0", path = "../../support/text" }
token = { version = "0.1.0", path = "../../representations/token" }

