[package]
name = "build_asg"
version = "0.1.0"
edition = "2024"

[dependencies]
asg = { version = "0.1.0", path = "../../representations/asg" }
ast = { version = "0.1.0", path = "../../representations/ast" }
ast_workspace = { version = "0.1.0", path = "../../representations/ast_workspace" }
ast_workspace_settings = { version = "0.1.0", path = "../../representations/ast_workspace_settings" }
attributes = { version = "0.1.0", path = "../../representations/attributes" }
compiler = { version = "0.1.0", path = "../../support/compiler" }
data_units = { version = "0.1.0", path = "../../support/data_units" }
derive_more.workspace = true
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
fs_tree = { version = "0.1.0", path = "../../representations/fs_tree" }
indexmap.workspace = true
itertools.workspace = true
num.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
primitives = { version = "0.1.0", path = "../../representations/primitives" }
source_files = { version = "0.1.0", path = "../../representations/source_files" }
std_ext = { version = "0.1.0", path = "../../support/std_ext" }
