[package]
name = "build_c_token"
version = "0.1.0"
edition = "2024"

[dependencies]
c_token = { version = "0.1.0", path = "../../representations/c_token" }
inflow = { version = "0.1.0", path = "../../support/inflow" }
pp_token = { version = "0.1.0", path = "../../representations/pp_token" }
source_files = { version = "0.1.0", path = "../../representations/source_files" }
