[package]
name = "build_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
append_only_vec = { version = "0.1.0", path = "../../support/append_only_vec" }
arena = { version = "0.1.0", path = "../../support/arena" }
asg = { version = "0.1.0", path = "../../representations/asg" }
attributes = { version = "0.1.0", path = "../../representations/attributes" }
compiler = { version = "0.1.0", path = "../../support/compiler" }
data_units = { version = "0.1.0", path = "../../support/data_units" }
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
indexmap.workspace = true
ir = { version = "0.1.0", path = "../../representations/ir" }
num.workspace = true
primitives = { version = "0.1.0", path = "../../representations/primitives" }
source_files = { version = "0.1.0", path = "../../representations/source_files" }
target = { version = "0.1.0", path = "../../support/target" }
target_layout = { version = "0.1.0", path = "../../support/target_layout" }
