[package]
name = "build_llvm_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
append_only_vec = { version = "0.1.0", path = "../../support/append_only_vec" }
ast = { version = "0.1.0", path = "../../representations/ast" }
backend = { version = "0.1.0", path = "../../support/backend" }
build_executable = { version = "0.1.0", path = "../build_executable" }
colored.workspace = true
compiler = { version = "0.1.0", path = "../../support/compiler" }
cstr.workspace = true
data_units = { version = "0.1.0", path = "../../support/data_units" }
derive_more.workspace = true
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
ir = { version = "0.1.0", path = "../../representations/ir" }
itertools.workspace = true
llvm-sys = { package = "llvm-sys", version = "201" }
memo-map.workspace = true
once_map.workspace = true
primitives = { version = "0.1.0", path = "../../representations/primitives" }
target = { version = "0.1.0", path = "../../support/target" }
target_layout = { version = "0.1.0", path = "../../support/target_layout" }
