[package]
name = "build_pp_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
inflow = { version = "0.1.0", path = "../../support/inflow" }
itertools.workspace = true
look_ahead = { version = "0.1.0", path = "../../support/look_ahead" }
pp_ast = { version = "0.1.0", path = "../../representations/pp_ast" }
pp_token = { version = "0.1.0", path = "../../representations/pp_token" }
source_files = { version = "0.1.0", path = "../../representations/source_files" }
text = { version = "0.1.0", path = "../../support/text" }
