[package]
name = "build_token"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more.workspace = true
inflow = { version = "0.1.0", path = "../../support/inflow" }
num-bigint.workspace = true
num-traits.workspace = true
source_files = { version = "0.1.0", path = "../../representations/source_files" }
text = { version = "0.1.0", path = "../../support/text" }
token = { version = "0.1.0", path = "../../representations/token" }
