[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
build_pp_ast = { version = "0.1.0", path = "../build_pp_ast" }
build_workspace = { version = "0.1.0", path = "../build_workspace" }
compiler = { version = "0.1.0", path = "../../support/compiler" }
derive_more.workspace = true
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
enum_dispatch.workspace = true
indoc.workspace = true
source_files = { version = "0.1.0", path = "../../representations/source_files" }
target = { version = "0.1.0", path = "../../support/target" }
text = { version = "0.1.0", path = "../../support/text" }
