[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
nix = { version = "0.30.1", features = ["fs"] }
smol = "2.0.2"
notify = { version = "8.1.0", optional = true }
windows-sys = { version = "0.61.2", option = true }

[features]
watch = ["notify", "windows_sys"]
