[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.1"
nix = { version = "0.30.1", features = ["fs"] }
request = { version = "0.1.0", path = "../request" }
smol = "2.0.2"
vfs = { version = "0.1.0", path = "../vfs" }
idle = { version = "0.1.0", path = "../idle" }
windows-sys = { version = "0.61.2" }
text_edit = { version = "0.1.0", path = "../../representations/text_edit" }
ipc_message = { version = "0.1.0", path = "../../representations/ipc_message" }
