[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
derive_more.workspace = true
diagnostics = { version = "0.1.0", path = "../../support/diagnostics" }
enum_dispatch.workspace = true
slotmap.workspace = true
smallvec = "1.15.1"
std_ext = { version = "0.1.0", path = "../../support/std_ext" }
